# portfolio

./: PORTFOLIO_HSPARK.gslides  README.md
Servers/Tomcat v9.0 Server at localhost-config/: server.xml
__담당주요코드_프로젝트별/영상내차량번호판식별/기기설정및번호판검출_전체_rpi4_camera_opencv_tesseractocr/: CMakeLists.txt  recognizer.cpp
__담당주요코드_프로젝트별/할일목록/: todos.h
__담당주요코드_프로젝트별_정리중/boaard/: .project
__담당주요코드_프로젝트별_정리중/detector/: .classpath
__담당주요코드_프로젝트별_정리중/sensors/webapp_dht11/: db_op_dht11.py
__담당주요코드_프로젝트별_정리중/todolist/: main.cpp  todolist.vcxproj  todolist.vcxproj.filters  todos.cpp
__담당주요코드_프로젝트별_정리중/tripist/: pom.xml
__담당주요코드_프로젝트별_정리중/차량번호판식별/차량추적웹_실시간스트리밍_기기제어/: streaming_js.jsp
_creator/: generator.py  main_script.py  model.py  preprocess.py  sample_lstm.py
_lecture/__test/_20221027/: test.txt
_lecture/_mysql_ex/: linux_setup.txt
_lecture/_mysql_ex/_sql/: air.sql  (+11 more)
boaard/: .project
carplate/: .project  pom.xml
carplate/licensePlateTrace/: .project
carplate/setting_raspi/: CMakeCache.txt  Makefile  carplate  cmake_install.cmake  recognizer.cpp
detector/: .classpath  .project  pom.xml
hughbot/: hughbot_mk2.py  hugubot.py
react_redux_practice/: package-lock.json
react_redux_practice/test/: package-lock.json  package.json
react_redux_practice/test-app/: package-lock.json
react_redux_practice/todos/: package-lock.json
sensors/webapp_dht11/: ctl_dht11.py  db_op_dht11.py
todolist/: todolist.sln
todolist/Debug/: vc143.idb
todolist_raw/: _todolist.sln  _todolist.vcxproj.filters  _todolist.vcxproj.xml
tripist/: pom.xml
tripist/tripist/: pom.xml
(+608 files in other folders)
